template html made

--- a/WebAppPlayground/Attempt3_d3js_with_Flask/templates/index.html
+++ b/WebAppPlayground/Attempt3_d3js_with_Flask/templates/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>title</title>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="main.js"></script>
-  <link rel="stylesheet" href="main.css">
+  <script src="../main.js"></script>
+  <link rel="stylesheet" href="../main.css">
 
 </head>
 
@@ -23,6 +23,7 @@
   <!-- text output here -->
   <div id="text-output">
     <!-- TO DO -->
+    <text>{{ flask_check }}</text>
 
   </div>
 
