flask hosting works locally on my laptop

--- a/WebAppPlayground/Attempt3_d3js_with_Flask/templates/index.html
+++ b/WebAppPlayground/Attempt3_d3js_with_Flask/templates/index.html
@@ -17,18 +17,23 @@
 
   <!-- graph data here -->
   <div id="Graph">
+    <h2> Graph </h2>
     <!-- TO DO -->
   </div>
 
   <!-- text output here -->
   <div id="text-output">
+    <h2> Output </h2>
     <!-- TO DO -->
+    {% if debug %}
     <text>{{ flask_check }}</text>
+    {% endif %}
 
   </div>
 
   <!-- user input here -->
   <div id="Inputs">
+    <h2> Input </h2>
     <!-- TO DO -->
     <form>
 
