--- a/WebAppPlayground/Attempt3_d3js_with_Flask/templates/index.html
+++ b/WebAppPlayground/Attempt3_d3js_with_Flask/templates/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>title</title>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="../main.js"></script>
-  <link rel="stylesheet" href="../main.css">
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script src={{url_for('static', filename='main.js')}}></script>
+  <link rel="stylesheet" href={{url_for('static', filename='main.css')}}>
 
 </head>
 
@@ -18,6 +18,7 @@
   <!-- graph data here -->
   <div id="Graph">
     <h2> Graph </h2>
+    <div id="graph_stuff"> </div>
     <!-- TO DO -->
   </div>
 
@@ -39,7 +40,9 @@
 
       <ul>
         <li>Sample rate (Hz) <input type="number" id="sample-rate"></input></li>
+        <li>Replot rate (1/min) <input type="number" id="sample-rate"></input></li>
         <li><button type="button" onclick="parseUserInput()">Update</button></li>
+        <li><button type="button" onclick="redrawPlot()">Manual Replot</button></li>
         <li>Enable Power <input type="radio" name="enable" value=1 onclick="turnOnRelay()"></input></li>
         <li>Disable Power<input type="radio" name="enable" value=0 onclick="turnOffRelay()"></input></li>
       </ul>
