--- a/WebAppPlayground/Attempt4_Flask_with_Matplotlib/templates/index.html
+++ b/WebAppPlayground/Attempt4_Flask_with_Matplotlib/templates/index.html
@@ -2,54 +2,10 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>title</title>
-  <link rel="stylesheet" href={{url_for('static', filename='main.css')}}>
-
 </head>
 
 <body>
-  <!-- quick button test -->
-  <!-- <p id="demo"> ECE 4760... </p>
-  <button type="button" onclick="myFunction()">Press Me</button> -->
-
-  <!-- graph data here -->
-  <div id="Graph">
-    <h2> Graph </h2>
-    <div id="graph_stuff"> </div>
-    <!-- TO DO -->
-  </div>
-
-  <!-- text output here -->
-  <div id="text-output">
-    <h2> Output </h2>
-    <!-- TO DO -->
-    {% if debug %}
-    <text>{{ flask_check }}</text>
-    {% endif %}
-
-  </div>
-
-  <!-- user input here -->
-  <div id="Inputs">
-    <h2> Input </h2>
-    <!-- TO DO -->
-    <form>
-
-      <ul>
-        <li>Sample rate (Hz) <input type="number" id="sample-rate"></input></li>
-        <li>Replot rate (1/min) <input type="number" id="sample-rate"></input></li>
-        <li><button type="button" onclick="">Update</button></li>
-        <li><button type="button" onclick="">Manual Replot</button></li>
-        <li>Enable Power <input type="radio" name="enable" value=1 onclick="turnOnRelay()"></input></li>
-        <li>Disable Power<input type="radio" name="enable" value=0 onclick="turnOffRelay()"></input></li>
-      </ul>
-      </ul>
-      </ul>
-
-
-    </form>
-  </div>
+  <p>Hello World</p>
 </body>
 
 </html>
